--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -739,7 +739,7 @@ if( KICAD_SCRIPTING OR KICAD_SCRIPTING_MODULES )
 
             if( APPLE ) # extra path for macOS, so that 'wx' module is accessible
                 set( _py_site_path
-                    "${_py_site_path};sys.path.insert(0, \"${PYTHON_SITE_PACKAGE_PATH}/wx-3.0-osx_cocoa\");" )
+                    "${_py_site_path}sys.path.insert(0, \"${PYTHON_SITE_PACKAGE_PATH}/wx-3.0-osx_cocoa\");" )
             endif()
         endif()
 
