QA: qa_utils has to be static
If qa_utils is not explicitly declared with STATIC, the build
fails in environments where the BUILD_SHARED_LIBS CMake option is
present and set to "ON". An example of this is Fedora COPR.

--- a/qa/qa_utils/CMakeLists.txt
+++ b/qa/qa_utils/CMakeLists.txt
@@ -24,7 +24,7 @@ set( QA_UTIL_COMMON_SRC
 )
 
 # A generic library of useful functions for various testing purposes
-add_library( qa_utils
+add_library( qa_utils STATIC
     ${QA_UTIL_COMMON_SRC}
 )
 
