Include directories are implied by legacy_gal linkage
This avoids having to manually specify include/legacy_gal
in and legacy GAL targets, and harominizes with legacy_wx.

This also means .cpp files in common/legacy_gal do not
need to specify the legacy_gal subdirectory, so they
will continue to work as needed when legacy_wx is removed.

--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -88,6 +88,7 @@ add_library( legacy_gal STATIC ${LEGACY_GAL_SRCS} )
 add_library( legacy_wx STATIC ${LEGACY_WX_SRCS} )
 
 target_include_directories( legacy_wx PUBLIC ../include/legacy_wx )
+target_include_directories( legacy_gal PUBLIC ../include/legacy_gal )
 
 target_link_libraries( gal
     ${GLEW_LIBRARIES}
