BOM plugins refactor
Extended BOM_PLUGIN to a class and moved the plugin construction related code there.

--- a/eeschema/CMakeLists.txt
+++ b/eeschema/CMakeLists.txt
@@ -130,6 +130,7 @@ set( EESCHEMA_SRCS
     ${EESCHEMA_DLGS}
     ${EESCHEMA_WIDGETS}
     ${EESCHEMA_LIBEDIT_SRCS}
+    bom_plugins.cpp
     sch_view.cpp
     sch_painter.cpp
     annotate.cpp
