.gitignore: demo fp-info-cache files
As cache files, these are not required to be checked-in
and generate more noise on file changes.

--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ include/pcb_lexer.h
 # demo project auxillary files
 demos/**/*-bak
 demos/**/_autosave-*
+demos/**/fp-info-cache
 
 # editor/OS fluff
 .*.swp
