--- a/common/CMakeLists.txt
+++ b/common/CMakeLists.txt
@@ -3,6 +3,8 @@ if( COMPILER_SUPPORTS_WSHADOW )
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${WSHADOW_FLAGS}")
 endif()
 
+add_subdirectory( libeval )
+
 include_directories( BEFORE ${INC_BEFORE} )
 include_directories(
     ./dialogs
